# liveuta-native

./: .gitignore  .oxlintrc.json  .prettierrc  AGENTS.md  README.md  drizzle.config.ts  index.html  lefthook.yml  package-lock.json  package.json  tsconfig.json  ui.config.json  vite.config.js
.github/: build.yml  build.yml.bak
.github/workflows/: main.yml  release.yml
src/: app.css  app.html  main.tsx  routeTree.gen.ts  site-config.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/migrations/: 0000_opposite_the_captain.sql
src-tauri/resources/migrations/meta/: 0000_snapshot.json  _journal.json
src-tauri/src/: commands.rs  env.rs  lib.rs  main.rs
src/components/common/: copy-button.tsx  open-in-new.tsx  schedule-special-copy.tsx
src/components/contexts/: command-palette.tsx  effect-provider.tsx  global-shortcut-provider.tsx  settings-provider.tsx  shortcut-provider.tsx  theme-provider.tsx  youtube-pip-provider.tsx
src/components/header/: header-breadcrumb.tsx  index.tsx
src/components/navbar/: index.tsx
src/components/player/: youtube-iframe-controller.ts  youtube-player.css  youtube-player.tsx
src/components/providers/: breadcrumb.provider.tsx  command-palette.provider.tsx  effect,provider.tsx  global-shortcut.provider.tsx  query-provider.tsx  router.provider.tsx  settings.provider.tsx  youtube-pip.provider.tsx
src/components/sidebar/: index.tsx  logo.tsx  main-nav.tsx  scroll-to-top.tsx
src/components/theme/: theme-provider.tsx
src/components/ui/: aspect-ratio.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  checkbox.tsx  command.tsx  date-picker.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  field.tsx  label.tsx  pagination.tsx  radio-group.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  switch.tsx  table.tsx  tabs.tsx  text-field.tsx  timeline.tsx  toggle.tsx  tooltip.tsx
src/constants/: effect.ts  settings.constant.ts  sqlite.constant.ts  time.constant.ts  top-routes.constant.ts
src/icons/fluent/: maximize-24-filled.tsx  minimize-24-regular.tsx
src/icons/ic/: round-pause-circle.tsx  round-pause.tsx  round-play-arrow.tsx  round-play-circle.tsx
src/icons/logos/: youtube-icon.tsx
src/icons/lucide/: chevrons-up-down.tsx  panel-left.tsx
src/icons/material-symbols/: open-in-new.tsx  youtube-tv-outline.tsx
src/icons/mingcute/: expand-player-line.tsx  minimize-fill.tsx  miniplayer-line.tsx
src/icons/remix-icon/: calendar-schedule-line.tsx
src/icons/ri/: volume-mute-fill.tsx  volume-up-fill.tsx
src/icons/svg-spinners/: 90-ring-with-bg.tsx
src/icons/tabler/: arrow-big-up-filled.tsx  arrow-big-up-lines.filled.tsx  box-align-bottom-left-filled.tsx  box-align-bottom-right-filled.tsx  box-align-top-left-filled.tsx  box-align-top-right-filled.tsx  check.tsx  chevron-down.tsx  chevron-left.tsx  chevron-right.tsx  (+16 more)
src/lib/: env.ts  error.ts  fetch.ts  settings.ts  time.ts  utils.ts  youtube.ts
src/routes/: +layout.svelte  +page.svelte  __root.tsx  channel.tsx  channels.tsx  downloader.tsx  index.tsx  schedule.tsx
src/types/: mongodb.ts  mongodb.type.ts  route-info.type.ts  schedule.ts  settings.ts  settings.type.ts  youtube.ts
(+150 files in other folders)
