[package]
name = "liveuta-native"
version = "0.0.1"
description = "A Tauri App"
authors = ["utawaku"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "liveuta_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2", features = ["json"] }
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-sql = "2"
taurpc = "0.5.2"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
